@@ -77,6 +77,10 @@ IN DEVELOPMENT
       you pass a Unicode string rather than an 8-bit string. Callers need
       to be updated to encode first. (John Arbash Meinel)
 
+    * ``LockableFiles.lock_write()`` now accepts a ``token`` keyword argument,
+      so that a seperate LockableFiles instance can share a lock if it has the
+      right token.  (Andrew Bennetts, Robert Collins)
+
   BUGFIXES:
 
     * ``bzr annotate`` now uses dotted revnos from the viewpoint of the
